--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body{
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    font-size: 50px;
 }
 #cellBox{
     display: flex;
