--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,63 @@
 body{
     display: flex;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
 .player{
     border-right: 5px solid black;
     width: 330px;
-    font-size: 35px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 37px;
     text-align: center;
     padding: 20px;
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 32%, rgba(255,255,255,1) 40%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(to top,rgba(34,193,195,1) 0%, rgba(240,219,172,1) 100%);
 }
 .turn{
-    font-size: 50px;
+    font-size: 40px;
     margin-top: 150px;
+    font-family: 'Press Start 2P', cursive;
 }
 .gameboard{
-    font-family: 'Montserrat', sans-serif;
+    border-top: 77px solid black;
+    border-bottom: 77px solid black;
     width: 1200px;
-    margin: 0;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding: 20px;
+    background-image: url("img src/retro_background.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .cell{
-    width: 180px;
-    height: 180px;
-    border: 5px solid black;
+    width: 160px;
+    height: 160px;
+    border: 10px solid;
     border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    font-size: 50px;
+    font-size: 77px;
 }
 #cellBox{
     display: flex;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    margin-top: 12rem;
+    margin-top: 5rem;
 }
 .opponent{
     border-left: 5px solid black;
     width: 330px;
-    font-size: 35px;
-    font-family: 'Montserrat', sans-serif;
+    font-size: 37px;
+    font-family: 'Press Start 2P', cursive;
     text-align: center;
     padding: 20px;
-    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 32%, rgba(255,255,255,1) 40%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(to top, rgba(34,193,195,1) 0%, rgba(240,219,172,1) 100%);
 }
 #boxOne, #boxTwo, #boxThree{
     border-left: 0;
